export type Address = {
  address_id?: number;
  country: string;
  state?: string;
  postalCode: string;
  city: string;
  street: string;
  houseNumber: string;
  apartment?: string;
};
